--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
       },
       "muon": {
         "dir": "src/electron",
+        "branch": "safe_browsing_api",
         "repository": {
           "url": "https://github.com/brave/muon.git"
         }
       },
       "browser_laptop": {
         "dir": "src/browser-laptop",
+        "branch": "safe_browsing_api",
         "repository": {
           "url": "https://github.com/brave/browser-laptop.git"
         }
